Project scribble_stadium_be_a {
  database_type: 'PostgreSQL'
  Note: 'Scribble Stadium BE'
}

Table profiles {
  id uuid [primary key]
  name varchar
  email varchar
  role varchar
  pin varchar
  createdAt datetime // with TZ
}

Table children {
  id number [primary key]
  parentId varchar [ref: > profiles.id]
  name varchar
  pin varchar
}

Table stories {
  id number [primary key]
  title varchar
  description varchar
  author varchar
}

Table storyEpisodes {
  id number [primary key]
  storyId varchar [ref: > stories.id]
  episodeNum numeric
  textImgUrl varchar
  audioUrl varchar
  content varchar
}

Table storyEpisodePrompts {
  id number [primary key]
  episdoeId varchar [ref: > storyEpisodes.id]
  type varchar // writing or drawing
  prompt varchar
}

Table submissions {
  id number [primary key]
  childId varchar [ref: > children.id]
  storyId varchar [ref: > stories.id]
  squadId number [ref: > squads.id]
  matchupId number [ref: > matchups.id]
  episodeId varchar [ref: > storyEpisodes.id]
  approvedAt datetime
  episodeStartDate datetime
  finishedReadingAt datetime
  finishedWritingAt datetime
  squadCreatedAt datetime
  votedAt datetime
}

Table submissionPages {
  id number [primary key]
  submissionId number [ref: > submissions.id]
  type varchar // writing or drawing
  url varchar 
  pageNum numeric
  createdAt datetime
  updatedAt datetime
}

Table squads {
  id number [primary key]
  childId number [ref: > children.id]
  subId number [ref: > submissions.id]
  teammateSubId number [ref: > submissions.id]
  myDrawPoints number
  myWritePoints number
  teammateDrawPoints number
  teammateWritePoints number
}

Table matchups {
  id number [primary key]
  episodeDate datetime
}

Table matchupQuads {
  id number [primary key]
  matchupId number [ref: > matchups.id]
  quad number //[1,2,3,4]
  pageType string
  totalPoints number
  winnerSubId number
}

Table matchupQuadPlayers {
  id number [primary key]
  matchupId number [ref: > matchups.id]
  matchupQuadId number [ref: > matchupQuads.id]
  subId number [ref: > submissions.id]
}
